stepflow-rs/crates/stepflow-cli/tests/commands/snapshots/test_cli__commands__test_list_components__list_components_custom_config.snap
---
source: crates/stepflow-cli/tests/commands/test_list_components.rs
info:
  program: stepflow
  args:
    - "--log-file=/dev/null"
    - "--omit-stack-trace"
    - "--log-level=error"
    - list-components
    - "--config=/var/folders/zk/lxqpq1490bb5xkvpdg25058r0000gn/T/.tmp0QT2ZJ/custom-config.yml"
  env:
    STEPFLOW_LOG_DESTINATION: ""
    STEPFLOW_LOG_FILE: ""
    STEPFLOW_LOG_FORMAT: ""
    STEPFLOW_LOG_LEVEL: ""
    STEPFLOW_OTHER_LOG_LEVEL: ""
    STEPFLOW_OTLP_ENDPOINT: ""
    STEPFLOW_TRACE_ENABLED: ""
---
success: true
exit_code: 0
----- stdout -----
Available Components:
====================

Component: /create_messages (plugin: test-builtins)
  Description: Create a chat message list from system instructions and user prompt
  Available Routes:
    /test-builtins/create_messages

Component: /eval (plugin: test-builtins)
  Description: Execute a nested workflow with given input and return the result
  Available Routes:
    /test-builtins/eval

Component: /get_blob (plugin: test-builtins)
  Description: Retrieve JSON data from a blob using its ID
  Available Routes:
    /test-builtins/get_blob

Component: /iterate (plugin: test-builtins)
  Description: Iteratively apply a workflow until it returns a result instead of next
  Available Routes:
    /test-builtins/iterate

Component: /load_file (plugin: test-builtins)
  Description: Load and parse a file (JSON, YAML, or text) from the filesystem
  Available Routes:
    /test-builtins/load_file

Component: /map (plugin: test-builtins)
  Description: Apply a workflow to each item in a list and collect the results
  Available Routes:
    /test-builtins/map

Component: /noop (plugin: test-builtins)
  Description: No-op component that returns its input unchanged. Used for benchmarking.
  Available Routes:
    /test-builtins/noop

Component: /openai (plugin: test-builtins)
  Description: Send messages to OpenAI's chat completion API and get a response
  Available Routes:
    /test-builtins/openai

Component: /put_blob (plugin: test-builtins)
  Description: Store JSON data as a blob and return its content-addressable ID
  Available Routes:
    /test-builtins/put_blob

Component: /sleep (plugin: test-builtins)
  Description: Sleeps for a specified duration then returns. Used for benchmarking concurrent flow capacity.
  Available Routes:
    /test-builtins/sleep

Total components: 10

----- stderr -----
