stepflow-rs/crates/stepflow-cli/tests/commands/snapshots/test_cli__commands__test_list_components__list_components_default.snap
---
source: crates/stepflow-cli/tests/commands/test_list_components.rs
info:
  program: stepflow
  args:
    - "--log-file=/dev/null"
    - "--omit-stack-trace"
    - "--log-level=error"
    - list-components
    - "--config=tests/stepflow-config.yml"
  env:
    STEPFLOW_LOG_DESTINATION: ""
    STEPFLOW_LOG_FILE: ""
    STEPFLOW_LOG_FORMAT: ""
    STEPFLOW_LOG_LEVEL: ""
    STEPFLOW_OTHER_LOG_LEVEL: ""
    STEPFLOW_OTLP_ENDPOINT: ""
    STEPFLOW_TRACE_ENABLED: ""
---
success: true
exit_code: 0
----- stdout -----
Available Components:
====================

Component: /create_messages (plugin: builtin)
  Description: Create a chat message list from system instructions and user prompt
  Available Routes:
    /builtin/create_messages

Component: /eval (plugin: builtin)
  Description: Execute a nested workflow with given input and return the result
  Available Routes:
    /builtin/eval

Component: /get_blob (plugin: builtin)
  Description: Retrieve JSON data from a blob using its ID
  Available Routes:
    /builtin/get_blob

Component: /iterate (plugin: builtin)
  Description: Iteratively apply a workflow until it returns a result instead of next
  Available Routes:
    /builtin/iterate

Component: /load_file (plugin: builtin)
  Description: Load and parse a file (JSON, YAML, or text) from the filesystem
  Available Routes:
    /builtin/load_file

Component: /map (plugin: builtin)
  Description: Apply a workflow to each item in a list and collect the results
  Available Routes:
    /builtin/map

Component: /noop (plugin: builtin)
  Description: No-op component that returns its input unchanged. Used for benchmarking.
  Available Routes:
    /builtin/noop

Component: /openai (plugin: builtin)
  Description: Send messages to OpenAI's chat completion API and get a response
  Available Routes:
    /builtin/openai

Component: /put_blob (plugin: builtin)
  Description: Store JSON data as a blob and return its content-addressable ID
  Available Routes:
    /builtin/put_blob

Component: /sleep (plugin: builtin)
  Description: Sleeps for a specified duration then returns. Used for benchmarking concurrent flow capacity.
  Available Routes:
    /builtin/sleep

Total components: 10

----- stderr -----
