stepflow-rs/crates/stepflow-cli/tests/commands/snapshots/test_cli__commands__test_list_components__list_components_json_no_schemas.snap
---
source: crates/stepflow-cli/tests/commands/test_list_components.rs
info:
  program: stepflow
  args:
    - "--log-file=/dev/null"
    - "--omit-stack-trace"
    - "--log-level=error"
    - list-components
    - "--config=tests/stepflow-config.yml"
    - "--format=json"
    - "--schemas=false"
  env:
    STEPFLOW_LOG_DESTINATION: ""
    STEPFLOW_LOG_FILE: ""
    STEPFLOW_LOG_FORMAT: ""
    STEPFLOW_LOG_LEVEL: ""
    STEPFLOW_OTHER_LOG_LEVEL: ""
    STEPFLOW_OTLP_ENDPOINT: ""
    STEPFLOW_TRACE_ENABLED: ""
---
success: true
exit_code: 0
----- stdout -----
{
  "components": [
    {
      "component": "/create_messages",
      "path": "/create_messages",
      "description": "Create a chat message list from system instructions and user prompt",
      "plugin": "builtin",
      "routes": [
        "/builtin/create_messages"
      ]
    },
    {
      "component": "/eval",
      "path": "/eval",
      "description": "Execute a nested workflow with given input and return the result",
      "plugin": "builtin",
      "routes": [
        "/builtin/eval"
      ]
    },
    {
      "component": "/get_blob",
      "path": "/get_blob",
      "description": "Retrieve JSON data from a blob using its ID",
      "plugin": "builtin",
      "routes": [
        "/builtin/get_blob"
      ]
    },
    {
      "component": "/iterate",
      "path": "/iterate",
      "description": "Iteratively apply a workflow until it returns a result instead of next",
      "plugin": "builtin",
      "routes": [
        "/builtin/iterate"
      ]
    },
    {
      "component": "/load_file",
      "path": "/load_file",
      "description": "Load and parse a file (JSON, YAML, or text) from the filesystem",
      "plugin": "builtin",
      "routes": [
        "/builtin/load_file"
      ]
    },
    {
      "component": "/map",
      "path": "/map",
      "description": "Apply a workflow to each item in a list and collect the results",
      "plugin": "builtin",
      "routes": [
        "/builtin/map"
      ]
    },
    {
      "component": "/openai",
      "path": "/openai",
      "description": "Send messages to OpenAI's chat completion API and get a response",
      "plugin": "builtin",
      "routes": [
        "/builtin/openai"
      ]
    },
    {
      "component": "/put_blob",
      "path": "/put_blob",
      "description": "Store JSON data as a blob and return its content-addressable ID",
      "plugin": "builtin",
      "routes": [
        "/builtin/put_blob"
      ]
    }
  ]
}

----- stderr -----
