stepflow-rs/crates/stepflow-cli/tests/commands/snapshots/test_cli__commands__test_list_components__list_components_show_unreachable.snap
---
source: crates/stepflow-cli/tests/commands/test_list_components.rs
info:
  program: stepflow
  args:
    - "--log-file=/dev/null"
    - "--omit-stack-trace"
    - "--log-level=error"
    - list-components
    - "--config=/var/folders/zk/lxqpq1490bb5xkvpdg25058r0000gn/T/.tmprlzWDh/filtered-config.yml"
    - "--hide-unreachable=false"
  env:
    STEPFLOW_LOG_DESTINATION: ""
    STEPFLOW_LOG_FILE: ""
    STEPFLOW_LOG_FORMAT: ""
    STEPFLOW_LOG_LEVEL: ""
    STEPFLOW_OTHER_LOG_LEVEL: ""
    STEPFLOW_OTLP_ENDPOINT: ""
    STEPFLOW_TRACE_ENABLED: ""
---
success: true
exit_code: 0
----- stdout -----
Available Components:
====================

Component: /create_messages (plugin: test-builtins)
  Description: Create a chat message list from system instructions and user prompt
  Available Routes:
    /reachable/create_messages

Component: /eval (plugin: test-builtins)
  Description: Execute a nested workflow with given input and return the result
  Available Routes:
    /reachable/eval

Component: /get_blob (plugin: test-builtins)
  Description: Retrieve JSON data from a blob using its ID
  Available Routes:
    /reachable/get_blob

Component: /iterate (plugin: test-builtins)
  Description: Iteratively apply a workflow until it returns a result instead of next
  Available Routes:
    /reachable/iterate

Component: /load_file (plugin: test-builtins)
  Description: Load and parse a file (JSON, YAML, or text) from the filesystem
  Available Routes:
    /reachable/load_file

Component: /map (plugin: test-builtins)
  Description: Apply a workflow to each item in a list and collect the results
  Available Routes:
    /reachable/map

Component: /openai (plugin: test-builtins)
  Description: Send messages to OpenAI's chat completion API and get a response
  Available Routes:
    /reachable/openai

Component: /put_blob (plugin: test-builtins)
  Description: Store JSON data as a blob and return its content-addressable ID
  Available Routes:
    /reachable/put_blob

Total components: 8

----- stderr -----
